@@ -1,3 +1,10 @@
+2009-11-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/ao_tasks.c:
+   Add a simple popup menu to update the Tasks list and hide
+   the Messages window.
+
+
 2009-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/Makefile.am, src/tasks.c, src/tasks.h, src/ao_tasks.h,
